# elementalist

./: pyproject.toml
src/elementalist/: collections.py  element.py  registries.py  resolvers.py
tests/: test_registries.py
